# ark-yafa

./: .gitignore  CP-Curve-Script.ipynb  Cargo.toml  LICENSE
benches/: curve25519_scalar_mul.rs
sage_scripts/: ate.ipynb  fq.ipynb  fq3.ipynb  fq6.ipynb  fr.ipynb  g1.ipynb  g2.ipynb
src/: lib.rs
src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
src/ed25519/: mod.rs
src/ed25519/curves/: mod.rs  tests.rs
src/ed25519/fields/: tests.rs
src/fields/: fq.rs  fq3.rs  fq6.rs  mod.rs  tests.rs
src/yafa_108/: mod.rs
src/yafa_108/curves/: g1.rs  g2.rs  mod.rs  tests.rs
src/yafa_108/fields/: fq.rs  fq3.rs  fq6.rs  fr.rs  tests.rs
src/yafa_108/sage_scripts/: ate.ipynb  fq.ipynb  fq3.ipynb  fq6.ipynb  g1.ipynb  g2.ipynb
src/yafa_146/: mod.rs
src/yafa_146/curves/: g1.rs  g2.rs  mod.rs  tests.rs
src/yafa_146/fields/: fq.rs  fq12.rs  fq2.rs  fq6.rs  mod.rs  tests.rs
src/yafa_146/sage_scripts/: ate.ipynb  fq.ipynb  fq12.ipynb  fq2.ipynb  fq6.ipynb  g1.ipynb  g2.ipynb  tate.ipynb
