[package]
name = "ark-yafa"
version = "0.4.0"
authors = [ "arkworks contributors" ]
description = "The Yafa pairing-friendly elliptic curve that embeds curve25519"
homepage = "https://arkworks.rs"
keywords = ["cryptography", "finite-fields" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-gemini = { version = "0.0.1", default-features = false }
rayon = { version = "1", optional = true }
ark-bls12-381 = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", features = ["curve"], default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
itertools = { version = "0.10", default-features = false }

[dev-dependencies]
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-algebra-test-templates = { version = "^0.3.0", default-features = false }

[[bench]]
harness = false
name = "curve25519_scalar_mul"

[features]
default = [ "curve" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std", "ark-gemini/std"]
parallel = [ "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-gemini/parallel", "rayon" ]

curve = [ "scalar_field", "base_field" ]
scalar_field = []
base_field = []

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

[patch.crates-io]
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std" }
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-gemini = { git = "https://github.com/weikengchen/gemini", branch = "sync_0.4.0" }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves"}
ark-bn254 = { git = "https://github.com/arkworks-rs/curves"}
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", branch = "sync-algebra" }
ark-relations = {git = "https://github.com/arkworks-rs/snark", branch = "sync-algebra" }
ark-snark = { git = "https://github.com/arkworks-rs/snark", branch = "sync-algebra" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", branch = "g2prepared-serialization" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", branch = "g2prepared-serialization" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", branch = "g2prepared-serialization" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives" }
ark-sponge = { git = "https://github.com/arkworks-rs/sponge", branch = "update-serialize" }
ark-algebra-test-templates = { git = "https://github.com/arkworks-rs/algebra", branch = "g2prepared-serialization" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", branch = "g2prepared-serialization" }